Fix collapsing nav, location of serviceworker js

--- a/themes/thoughts/source/css/bootstrap/_pre_default.scss
+++ b/themes/thoughts/source/css/bootstrap/_pre_default.scss
@@ -1,1 +1,3 @@
 // Override bootstrap default values
+$primary: $rgba-primary;
+$secondary: $rgba-secondary;
