--- a/themes/tostring/source/css/style.styl
+++ b/themes/tostring/source/css/style.styl
@@ -26,3 +26,11 @@ ul li > p
       text-decoration underline
       &:hover
         color brand-primary
+
+.sidebarblock
+  display inline-block
+  width 300px
+  float right
+  margin 10px -40px 10px 30px
+  background-color lightgray
+  padding .85em
